--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,5 +1,4 @@
 source "https://rubygems.org"
-ruby "3.1.2"
 
 gem "aws-sdk"
 gem "rspec"
@@ -11,3 +10,4 @@ gem 'json'
 gem 'pp'
 gem "open-uri"
 gem "zip"
+gem 'openssl'
