--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -8,12 +8,6 @@ require "rubocop-rake"
 
 task default: [:spec]
 
-Rake::TestTask.new do |t|
-  t.pattern = "*/**/tests/test_*.rb"
-  t.verbose = true
-  t.warning = false
-end
-
 desc "Run specs."
 RSpec::Core::RakeTask.new do |t|
   t.pattern = "*/**/*_spec.rb"
@@ -21,6 +15,6 @@ end
 
 desc "Run rubocop"
 RuboCop::RakeTask.new(:rubocop) do |t|
-  t.options = ["--config", "../.github/linters/.ruby-lint.yml"]
+  t.options = ["--config", ".github/linters/.ruby-lint.yml"]
   t.requires << "rubocop-rake"
 end
